--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -5,7 +5,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     color: #4d4d4d;
-    background-color: blanchedalmond;
+    background-color: white;
 }
 a {color: red;
 text-decoration: none;
