--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -15,7 +15,7 @@ a:hover {
     font-weight: bold;
 }
 a:visited {
-    color: blueviolet;
+    color: purple;
 }
 li {
     font-size: 15px;
@@ -29,7 +29,8 @@ li {
 .underline {text-decoration: underline;}
 .bold {font-weight: bold;}
 .justify {text-align: justify;}
-}
-.italics {
-    font-style: italic;
+.italics {font-style: italic;}
+
+.header{
+
 }
