--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -6,6 +6,8 @@ body {
     font-size: 16px;
     color: #4d4d4d;
     background-color: white;
+    padding-left: 10%;
+    padding-right: 10%;
 
 .underline {text-decoration: underline;}
 
