--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -2,9 +2,9 @@
 Section 2
 4/3/2024 */
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
     font-size: 16px;
-    color: #4d4d4d;
+    color: black;
     background-color: white;
     padding-left: 10%;
     padding-right: 10%;
