--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -5,7 +5,7 @@ body {
     font-family: 'Times New Roman', Times, serif;
     font-size: 16px;
     color: black;
-    background-color: white;
+    background-color: whitesmoke;
     padding-left: 10%;
     padding-right: 10%;
 
