--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -22,3 +22,15 @@ body {
     font-size: 30px;
     margin-left: 220px;
 }
+
+li {
+    font-weight: normal;
+}
+
+ul {
+    font-weight: normal;
+}
+
+ol {
+    font-weight: normal;
+}
