--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -25,7 +25,12 @@ body {
 .header{
     text-align: center;
     font-size: 30px;
-    margin-left: 220px;
+}
+
+.header2 {
+    text-align: center;
+    font-size: 20px;
+    margin-top: 30;
 }
 
 li {
